Adicionei novo paragrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Meu site de exemplo para o GitHub Desktop</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ex possimus quod inventore necessitatibus rerum dicta laboriosam dolor repellendus voluptatibus. Soluta neque ab debitis aspernatur minus nam rerum, voluptates unde?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quas dolorem numquam quod, quasi nobis in quam recusandae minus quo beatae nesciunt, laudantium rem. Commodi, incidunt? Soluta, maxime quam. Porro.</p>
 </body>
 </html>
